# web-gpu-blog

./: .gitignore  .pre-commit-config.yaml  README.md  browser_friendly_inference.js  convert_model_to_onnx.py  eslint.config.js  hello.py  inference.cjs  inference_on_onnx.py  inference_with_onnx.js  main.py  package-lock.json  package.json  pyproject.toml  save_resnet_as_onnx.py  settings.py  smaller_test_script.cjs  smaller_test_script.js  test.html  test_saved_onnx_model.py
