[project]
name = "web-gpu-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.34.0",
    "vulture>=2.14",
]
